--- a/docs/mine-hnt/miner-cli/txn.mdx
+++ b/docs/mine-hnt/miner-cli/txn.mdx
@@ -11,14 +11,20 @@ import TabItem from "@theme/TabItem";
 ---
 
 # txn Commands
-
-## Listen
-
 ```
-miner peer listen
+Usage: blockchain txn commands
+
+  txn queue             - Show enqueued transactions in the txn_queue.
+  txn add_gateway       - Create an add gateway transaction.
+  txn assert_location   - Create an assert location transaction.
+```
+## Queue
+
+```bash
+miner txn queue
 ```
 
-Display the addresses this node is listening on in priority order.
+Show enqueued transactions in the txn_queue.
 
 <Tabs
   block={true}
@@ -26,128 +32,7 @@ Display the addresses this node is listening on in priority order.
   values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
 <TabItem value="command">
 
-_switches_
-
-| switch              | parameter | Note                                   |
-| ------------------- | --------- | -------------------------------------- |
-| --format=           | _csv_     | outputs to csv format                  |
-
-
-_Parameters_
-
-| param               | Type     | Note                                   |
-| ------------------- | -------- | -------------------------------------- |
-| none                | _n/a_    | none                                   |
-
-</TabItem>
-<TabItem value="output">
-
-```
-+--------------------------+
-|listen_addrs (prioritized)|
-+--------------------------+
-|/ip4/30.18.38.196/tcp/2154|
-| /ip4/172.18.0.3/tcp/2154 |
-+--------------------------+
-```
-or
-```
-listen_addrs (prioritized)
-/ip4/30.18.38.196/tcp/2154
-/ip4/172.18.0.3/tcp/2154
-```
-
-</TabItem>
-</Tabs>
-
-## Session
-
-```
-miner peer session
-```
-
-Display the nodes this node is connected to.
-
-<Tabs
-  block={true}
-  defaultValue="command"
-  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
-<TabItem value="command">
-
-_switches_
-
-| switch              | parameter | Note                                   |
-| ------------------- | --------- | -------------------------------------- |
-| --format=           | _csv_     | outputs to csv format                  |
-
-
-_Parameters_
-
-| param               | Type     | Note                                   |
-| ------------------- | -------- | -------------------------------------- |
-| none                | _n/a_    | none                                   |
-
-</TabItem>
-<TabItem value="output">
-
-```
-+----------------+---------------------+---------------------------------------+-------------------+
-|     local      |       remote        |                  p2p                  |       name        |
-+----------------+---------------------+---------------------------------------+-------------------+
-|/ip4/172.18.0.3/|/ip4/27.50.141.53/tcp|/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4|magnificent-flaxen-|
-|/ip4/172.18.0.3/|/ip4/73.57.11.1/tcp/4|/p2p/1122w6JQCCCPyEXiVh3EsghXAeMkZdcuVT|interesting-velvet-|
-|/ip4/172.18.0.3/|/ip4/173.13.153.185/t|/p2p/1125DtQXhkFGjTK9VP9KtsJiiAMEjM9S2m|  precise-tin-owl  |
-|/ip4/172.18.0.3/|/ip4/217.103.237.36/t|/p2p/1125XATXBAFmzKskxrtUw12avATVsCj1Dz|modern-lava-albatro|
-|/ip4/172.18.0.3/|/ip4/31.20.113.227/tc|/p2p/1127Yukwk8ci37ES5UbZ7DZTax4vLLa2as|fierce-bamboo-scorp|
-|/ip4/172.18.0.3/|/ip4/108.22.224.100/t|/p2p/1127aNUioFZK2RCHMSG8UYeeBBJFCWugbf|bouncy-myrtle-shell|
-|/ip4/172.18.0.3/|/ip4/35.161.222.43/tc|/p2p/1127gHz2sKqNJXQN8an6mNu1U3RusHyXkq| broad-iris-sheep  |
-|/ip4/172.18.0.3/|/ip4/85.230.84.6/tcp/|/p2p/1128EPZpkiXpdcvQVe84T3a6ijpic3kyZW|tangy-tangelo-narwh|
-|/ip4/172.18.0.3/|/ip4/86.85.32.70/tcp/|/p2p/1129Ur8K7mo8v1ytRbzSEvsswRuoF6g8qk|atomic-punch-orangu|
-|/ip4/172.18.0.3/|/ip4/82.127.221.97/tc|/p2p/112AFN6SezTLetmoJBj5Zid84XupKFyjme|damaged-cedar-wease|
-|/ip4/172.18.0.3/|/ip4/104.35.173.151/t|/p2p/112AySdMmbgqorb2md6XqsHZ1W8sschZi7|skinny-viridian-but|
-|/ip4/172.18.0.3/|/ip4/105.12.4.43/tcp/|/p2p/112BHFSMar4Ccba4BuHUeupwht2t1XAdE3| teeny-green-whale |
-|/ip4/172.18.0.3/|/ip4/12.172.82.74/tcp|/p2p/112C5p3cjnKDGXPJ4kLMRKYjt4KjGRGojd|zany-bubblegum-jagu|
-|/ip4/172.18.0.3/|/ip4/73.66.192.223/tc|/p2p/112F5Vk6XAS11vXpPbGqhit8rxy97NwpHn|macho-mercurial-chi|
-+----------------+---------------------+---------------------------------------+-------------------+
-```
-or
-```
-local,remote,p2p,name
-/ip4/172.18.0.3/tcp/2154,/ip4/27.50.141.53/tcp/44158,/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE,magnificent-flaxen-mandrill
-/ip4/172.18.0.3/tcp/2154,/ip4/73.57.11.1/tcp/44158,/p2p/1122w6JQCCCPyEXiVh3EsghXAeMkZdcuVTVoPuyCcfw78tK8GL5k,interesting-velvet-swan
-/ip4/172.18.0.3/tcp/2154,/ip4/173.13.153.185/tcp/44158,/p2p/1125DtQXhkFGjTK9VP9KtsJiiAMEjM9S2mgStQrc6hH3GGqB5mzF,precise-tin-owl
-/ip4/172.18.0.3/tcp/2154,/ip4/217.103.237.36/tcp/44158,/p2p/1125XATXBAFmzKskxrtUw12avATVsCj1DzDtYKGt8jAh6vygspw3,modern-lava-albatross
-/ip4/172.18.0.3/tcp/2154,/ip4/31.20.113.227/tcp/44158,/p2p/1127Yukwk8ci37ES5UbZ7DZTax4vLLa2asuzs59X8WszshK4ZnT,fierce-bamboo-scorpion
-/ip4/172.18.0.3/tcp/2154,/ip4/108.22.224.100/tcp/44158,/p2p/1127aNUioFZK2RCHMSG8UYeeBBJFCWugbfikBJg7ixhBJuEWakgJ,bouncy-myrtle-shell
-/ip4/172.18.0.3/tcp/2154,/ip4/35.161.222.43/tcp/443,/p2p/1127gHz2sKqNJXQN8an6mNu1U3RusHyXkqp9HcwpDVLNL2hqf961,broad-iris-sheep
-/ip4/172.18.0.3/tcp/2154,/ip4/85.230.84.6/tcp/44158,/p2p/1128EPZpkiXpdcvQVe84T3a6ijpic3kyZW2VhSMXFpBa12KAhBUs,tangy-tangelo-narwhal
-/ip4/172.18.0.3/tcp/2154,/ip4/86.85.32.70/tcp/44158,/p2p/1129Ur8K7mo8v1ytRbzSEvsswRuoF6g8qkwYnhhpab4jdNGt8aQ2,atomic-punch-orangutan
-/ip4/172.18.0.3/tcp/2154,/ip4/82.127.221.97/tcp/44158,/p2p/112AFN6SezTLetmoJBj5Zid84XupKFyjmezeB48aJDBRAHsyi7mQ,damaged-cedar-weasel
-/ip4/172.18.0.3/tcp/2154,/ip4/104.35.173.151/tcp/61908,/p2p/112AySdMmbgqorb2md6XqsHZ1W8sschZi7HAbQWpjsvvozoTvD4o,skinny-viridian-butterfly
-/ip4/172.18.0.3/tcp/2154,/ip4/12.172.82.74/tcp/60949,/p2p/112C5p3cjnKDGXPJ4kLMRKYjt4KjGRGojd3D26L4XMyaaiFL2Si9,zany-bubblegum-jaguar
-/ip4/172.18.0.3/tcp/2154,/ip4/73.66.192.223/tcp/44158,/p2p/112F5Vk6XAS11vXpPbGqhit8rxy97NwpHngKW7kMufsdmsyWgSVd,macho-mercurial-chimpanzee
-/ip4/172.18.0.3/tcp/2154,/ip4/71.181.67.133/tcp/44158,/p2p/112GyaGz1Zdk49zKvvsxPgKFEVkup37UZfYswKXLLn6FjkJfMEFi,beautiful-shadow-mantis
-```
-
-</TabItem>
-</Tabs>
-
-
-## Ping
-
-```
-miner peer ping :p2p
-```
-
-Ping the peer over an established or new session.
-
-<Tabs
-  block={true}
-  defaultValue="command"
-  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
-<TabItem value="command">
-
-_switches_
+_Switches_
 
 | switch              | parameter | Note                                   |
 | ------------------- | --------- | -------------------------------------- |
@@ -156,35 +41,122 @@ _switches_
 
 _Parameters_
 
-| param               | Type     | Note                                           |
-| ------------------- | -------- | ---------------------------------------------- |
-| :p2p                | _str_    | using the ip address or p2p chain address      |
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
 
 </TabItem>
 <TabItem value="output">
 
+```bash
+$ miner txn queue
+<Need output>
 ```
-$ miner peer ping /ip4/71.181.67.133/tcp/44158
-Pinged "/ip4/71.181.67.133/tcp/44158" successfully with roundtrip time: 632 ms
+
+</TabItem>
+</Tabs>
+
+## Add Gateway
+
+```bash
+miner txn add_gateway owner=<owner> [--payer <payer>] [--fee <fee>] [--staking_fee <staking_fee>]
+```
+
+  Creates a signed add gateway transaction required to add a new Gateway to the Helium network.
+  Requires an owner address. Optionally takes a payer address if the payer of the cost and fee is
+  not the same as the owner. Also optionally takes the transaction and staking fees (in DC) if the
+  caller knows these ahead of time.
+
+  Returns a Base64 encoded transaction to be used as an input to either the
+  Helium mobile application or the wallet CLI for signing by the owner, and payer if provided, and
+  final submission to the blockchain.
+
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| --payer             | _b58 addr_ | The b58 address of the payer of the fees. Defaults to the provided owner address |
+| --fee               | _int_     | The transaction fee in DC. Defaults to a chain computed fee                 |
+| --staking_fee       | _int_     |  The transaction fee in DC. Defaults to a chain computed staking fee                |
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| owner             | _b58 addr_ | The b58 address of the owner of the gateway to be added. |
+
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+<need output>
 ```
 or
 ```
-miner peer ping /p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE
-Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully with roundtrip time: 247 ms
-
+<need output>
 ```
 
 </TabItem>
 </Tabs>
 
 
+## Asert Location
 
+```bash
+miner txn assert_location owner=<owner> location=<location> [--payer <payer>] [--nonce <nonce]
 ```
 
-Usage: blockchain txn commands
+  Creates a signed location assertion required to declare the location of a Gateway on the Helium network.
+  Requires an owner address and location (in lat,lon or h3 form).
+  Optionally takes a payer address if the payer of the cost and fee is not the same as the owner.
+  Optionally takes a nonce.
 
-  txn queue             - Show enqueued transactions in the txn_queue.
-  txn add_gateway       - Create an add gateway transaction.
-  txn assert_location   - Create an assert location transaction.
+  Returns a Base64 encoded transaction to be used as an input to either the
+  Helium mobile application or the wallet CLI for signing by the owner, and payer if provided, and
+  final submission to the blockchain.
 
+
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| payer             | _p2p_     | The b58 address of the payer of the fees. Defaults to the provided owner address |
+| nonce             | _int_     | The assert_location nonce use for the transaction. (default 1)              |
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| owner               | _b58 addr_ | The b58 address of the owner of the gateway to be added. | 
+| location            | _h3_ or _lat,long_    | Either a h3 index or a comma separated geo location of the form (lat),(lon) |     
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+<need output>
 ```
+or
+```bash
+<need output>
+```
+
+</TabItem>
+</Tabs>
+
+
