--- a/docs/mine-hnt/miner-cli/minercli.mdx
+++ b/docs/mine-hnt/miner-cli/minercli.mdx
@@ -25,8 +25,8 @@ The github repository to review the code for the miner command is found [here](h
 The full usage details for all miner commands are located on dedicated command pages. There is one for each top-level command to keep the docs focused. A navgation menu will be on the right hand column to navigate through each sub command. There is a Tab for the Command "inputs" and example outputs of each command are also on an individual tab.
 
 ### Example
-```
-miner peer listen
+```bash
+miner peer listen [--format=csv]
 ```
 
 Display the addresses this node is listening on in priority order.
@@ -37,7 +37,7 @@ Display the addresses this node is listening on in priority order.
   values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
 <TabItem value="command">
 
-_switches_
+_Switches_
 
 | switch              | parameter | Note                                   |
 | ------------------- | --------- | -------------------------------------- |
@@ -53,7 +53,7 @@ _Parameters_
 </TabItem>
 <TabItem value="output">
 
-```
+```bash
 +--------------------------+
 |listen_addrs (prioritized)|
 +--------------------------+
@@ -62,7 +62,7 @@ _Parameters_
 +--------------------------+
 ```
 or
-```
+```bash
 listen_addrs (prioritized)
 /ip4/30.18.38.196/tcp/2154
 /ip4/172.18.0.3/tcp/2154
@@ -76,7 +76,7 @@ listen_addrs (prioritized)
 
 For additional details click [here](/mine-hnt/miner-cli/toplevel)
 
-```
+```bash
   foreground              Start release with output to stdout
   remote_console          Connect remote shell to running node
   rpc [Mod [Fun [Args]]]] Run apply(Mod, Fun, Args) on running node
@@ -109,38 +109,39 @@ For additional details click [here](/mine-hnt/miner-cli/toplevel)
 
 For additional details click [here](/mine-hnt/miner-cli/genesis)
 
-```
+```bash
 Usage: miner genesis commands
 
-  genesis create <old_genesis_file> <pubkey> <proof> <addrs>  - Create genesis block keeping old ledger transactions.
-  genesis forge <pubkey> <key_proof> <addrs>                  - Create genesis block from scratch just with the addresses.
-  genesis load <genesis_file>                                 - Load genesis block from file.
-  genesis export <path>                                       - Write genesis block to a file.
-  genesis key                                                 - create a keypair for use as a master key
-  genesis proof <privkey>                                     - create a key proof for adding a master key to the genesis block
+  genesis create <old_genesis_file> <pubkey> <proof> <addrs>         - Create genesis block keeping old ledger transactions.
+  genesis forge <pubkey> <key_proof> <addrs>                         - Create genesis block from scratch just with the addresses.
+  genesis load <genesis_file>                                        - Load genesis block from file.
+  genesis export <path>                                              - Write genesis block to a file.
+  genesis key                                                        - create a keypair for use as a master key
+  genesis proof <privkey>                                            - create a key proof for adding a master key to the genesis block
+  genesis export_ledger <masterkey> <txn_list_output_path>           - export data from ledger as a list of txns including accounts, gateways, validators and chainvars
+  genesis recreate_ledger <path_to_txn_list> <addrs> <n> <curve>     - run an initial dkg using a txn list exported via 'export_ledger'
 ```
 
 ### hbbft
 
 For addtional details click [here](/mine-hnt/miner-cli/hbbft)
 
-```
+```bash
 
 Usage: miner hbbft commands
 
   hbbft status           - Display hbbft status.
   hbbft queue            - Display hbbft message queue.
   hbbft skip             - Skip current hbbft round.
-  hbbft group            - Display current hbbfr group.
+  hbbft group            - Display current hbbft group.
   hbbft perf             - Show performance of current group members.
-
 ```
 
 ### peer
 
 For addtional details click [here](/mine-hnt/miner-cli/peer)
 
-```
+```bash
 Usage: blockchain peer commands
 
   peer listen            - Display the addresses this node is listening on.
@@ -151,15 +152,17 @@ Usage: blockchain peer commands
   peer addr              - Display the p2p address of this node.
   peer book              - Display information from the peerbook of this node.
   peer gossip_peers      - Display gossip peers of this node.
-  peer refresh           - command an updated peerbook for this peer from our gossip peers.
+  peer refresh           - Request an updated peerbook for this peer from our gossip peers.
   peer relay_reset       - Stop the current libp2p relay swarm and retry.
+  peer sync              - Connect to given peer and attempt to sync blocks.
+  peer fastforward       - Connect to given peer and attempt to deliver blocks rapidly.
 ```
 
 ### snapshot
 
 For addtional details click [here](/mine-hnt/miner-cli/snapshot)
 
-```
+```bash
 Usage: blockchain snapshot commands
 
   snapshot take   - Take a snapshot at the current ledger height.
@@ -174,7 +177,7 @@ Usage: blockchain snapshot commands
 
 For addtional details click [here](/mine-hnt/miner-cli/ledger)
 
-```
+```bash
 Usage: blockchain ledger commands
 
   ledger balance             - Get the balance for one or all addresses.
@@ -187,7 +190,7 @@ Usage: blockchain ledger commands
 
 For addtional details click [here](/mine-hnt/miner-cli/info)
 
-```
+```bash
 Usage: miner info commands
 
   info height            - Get height of the blockchain for this miner.
@@ -204,7 +207,7 @@ Usage: miner info commands
 
 For addtional details click [here](/mine-hnt/miner-cli/trace)
 
-```
+```bash
 Usage: blockchain trace commands
 
   trace start   - Start a trace for a given filter and level.
@@ -215,7 +218,7 @@ Usage: blockchain trace commands
 
 For addtional details click [here](/mine-hnt/miner-cli/txn)
 
-```
+```bash
 Usage: blockchain txn commands
 
   txn queue             - Show enqueued transactions in the txn_queue.
@@ -226,7 +229,7 @@ Usage: blockchain txn commands
 
 For addtional details click [here](/mine-hnt/miner-cli/dkg)
 
-```
+```bash
 Usage: miner dkg commands
 
   dkg status           - Display dkg status.
@@ -245,7 +248,7 @@ Missing in CLI help
 
 For addtional details click [here](/mine-hnt/miner-cli/repair)
 
-```
+```bash
 Usage: blockchain repair commands
 
   repair sync_pause     - Temporarily pause transaction sync
