--- a/docs/mine-hnt/miner-cli/repair.mdx
+++ b/docs/mine-hnt/miner-cli/repair.mdx
@@ -1,6 +1,7 @@
 ---
 id: minercli-repair
 sidebar_label: repair
+hide_title: true
 slug: /mine-hnt/miner-cli/repair
 ---
 
@@ -10,282 +11,7 @@ import TabItem from "@theme/TabItem";
 ---
 
 # Repair Commands
-
-## Listen
-
 ```
-miner peer listen
-```
-
-Display the addresses this node is listening on in priority order.
-
-<Tabs
-  block={true}
-  defaultValue="command"
-  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
-<TabItem value="command">
-
-_switches_
-
-| switch              | parameter | Note                                   |
-| ------------------- | --------- | -------------------------------------- |
-| --format=           | _csv_     | outputs to csv format                  |
-
-
-_Parameters_
-
-| param               | Type     | Note                                   |
-| ------------------- | -------- | -------------------------------------- |
-| none                | _n/a_    | none                                   |
-
-</TabItem>
-<TabItem value="output">
-
-```
-+--------------------------+
-|listen_addrs (prioritized)|
-+--------------------------+
-|/ip4/30.18.38.196/tcp/2154|
-| /ip4/172.18.0.3/tcp/2154 |
-+--------------------------+
-```
-or
-```
-listen_addrs (prioritized)
-/ip4/30.18.38.196/tcp/2154
-/ip4/172.18.0.3/tcp/2154
-```
-
-</TabItem>
-</Tabs>
-
-## Session
-
-```
-miner peer session
-```
-
-Display the nodes this node is connected to.
-
-<Tabs
-  block={true}
-  defaultValue="command"
-  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
-<TabItem value="command">
-
-_switches_
-
-| switch              | parameter | Note                                   |
-| ------------------- | --------- | -------------------------------------- |
-| --format=           | _csv_     | outputs to csv format                  |
-
-
-_Parameters_
-
-| param               | Type     | Note                                   |
-| ------------------- | -------- | -------------------------------------- |
-| none                | _n/a_    | none                                   |
-
-</TabItem>
-<TabItem value="output">
-
-```
-+----------------+---------------------+---------------------------------------+-------------------+
-|     local      |       remote        |                  p2p                  |       name        |
-+----------------+---------------------+---------------------------------------+-------------------+
-|/ip4/172.18.0.3/|/ip4/27.50.141.53/tcp|/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4|magnificent-flaxen-|
-|/ip4/172.18.0.3/|/ip4/73.57.11.1/tcp/4|/p2p/1122w6JQCCCPyEXiVh3EsghXAeMkZdcuVT|interesting-velvet-|
-|/ip4/172.18.0.3/|/ip4/173.13.153.185/t|/p2p/1125DtQXhkFGjTK9VP9KtsJiiAMEjM9S2m|  precise-tin-owl  |
-|/ip4/172.18.0.3/|/ip4/217.103.237.36/t|/p2p/1125XATXBAFmzKskxrtUw12avATVsCj1Dz|modern-lava-albatro|
-|/ip4/172.18.0.3/|/ip4/31.20.113.227/tc|/p2p/1127Yukwk8ci37ES5UbZ7DZTax4vLLa2as|fierce-bamboo-scorp|
-|/ip4/172.18.0.3/|/ip4/108.22.224.100/t|/p2p/1127aNUioFZK2RCHMSG8UYeeBBJFCWugbf|bouncy-myrtle-shell|
-|/ip4/172.18.0.3/|/ip4/35.161.222.43/tc|/p2p/1127gHz2sKqNJXQN8an6mNu1U3RusHyXkq| broad-iris-sheep  |
-|/ip4/172.18.0.3/|/ip4/85.230.84.6/tcp/|/p2p/1128EPZpkiXpdcvQVe84T3a6ijpic3kyZW|tangy-tangelo-narwh|
-|/ip4/172.18.0.3/|/ip4/86.85.32.70/tcp/|/p2p/1129Ur8K7mo8v1ytRbzSEvsswRuoF6g8qk|atomic-punch-orangu|
-|/ip4/172.18.0.3/|/ip4/82.127.221.97/tc|/p2p/112AFN6SezTLetmoJBj5Zid84XupKFyjme|damaged-cedar-wease|
-|/ip4/172.18.0.3/|/ip4/104.35.173.151/t|/p2p/112AySdMmbgqorb2md6XqsHZ1W8sschZi7|skinny-viridian-but|
-|/ip4/172.18.0.3/|/ip4/105.12.4.43/tcp/|/p2p/112BHFSMar4Ccba4BuHUeupwht2t1XAdE3| teeny-green-whale |
-|/ip4/172.18.0.3/|/ip4/12.172.82.74/tcp|/p2p/112C5p3cjnKDGXPJ4kLMRKYjt4KjGRGojd|zany-bubblegum-jagu|
-|/ip4/172.18.0.3/|/ip4/73.66.192.223/tc|/p2p/112F5Vk6XAS11vXpPbGqhit8rxy97NwpHn|macho-mercurial-chi|
-+----------------+---------------------+---------------------------------------+-------------------+
-```
-or
-```
-local,remote,p2p,name
-/ip4/172.18.0.3/tcp/2154,/ip4/27.50.141.53/tcp/44158,/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE,magnificent-flaxen-mandrill
-/ip4/172.18.0.3/tcp/2154,/ip4/73.57.11.1/tcp/44158,/p2p/1122w6JQCCCPyEXiVh3EsghXAeMkZdcuVTVoPuyCcfw78tK8GL5k,interesting-velvet-swan
-/ip4/172.18.0.3/tcp/2154,/ip4/173.13.153.185/tcp/44158,/p2p/1125DtQXhkFGjTK9VP9KtsJiiAMEjM9S2mgStQrc6hH3GGqB5mzF,precise-tin-owl
-/ip4/172.18.0.3/tcp/2154,/ip4/217.103.237.36/tcp/44158,/p2p/1125XATXBAFmzKskxrtUw12avATVsCj1DzDtYKGt8jAh6vygspw3,modern-lava-albatross
-/ip4/172.18.0.3/tcp/2154,/ip4/31.20.113.227/tcp/44158,/p2p/1127Yukwk8ci37ES5UbZ7DZTax4vLLa2asuzs59X8WszshK4ZnT,fierce-bamboo-scorpion
-/ip4/172.18.0.3/tcp/2154,/ip4/108.22.224.100/tcp/44158,/p2p/1127aNUioFZK2RCHMSG8UYeeBBJFCWugbfikBJg7ixhBJuEWakgJ,bouncy-myrtle-shell
-/ip4/172.18.0.3/tcp/2154,/ip4/35.161.222.43/tcp/443,/p2p/1127gHz2sKqNJXQN8an6mNu1U3RusHyXkqp9HcwpDVLNL2hqf961,broad-iris-sheep
-/ip4/172.18.0.3/tcp/2154,/ip4/85.230.84.6/tcp/44158,/p2p/1128EPZpkiXpdcvQVe84T3a6ijpic3kyZW2VhSMXFpBa12KAhBUs,tangy-tangelo-narwhal
-/ip4/172.18.0.3/tcp/2154,/ip4/86.85.32.70/tcp/44158,/p2p/1129Ur8K7mo8v1ytRbzSEvsswRuoF6g8qkwYnhhpab4jdNGt8aQ2,atomic-punch-orangutan
-/ip4/172.18.0.3/tcp/2154,/ip4/82.127.221.97/tcp/44158,/p2p/112AFN6SezTLetmoJBj5Zid84XupKFyjmezeB48aJDBRAHsyi7mQ,damaged-cedar-weasel
-/ip4/172.18.0.3/tcp/2154,/ip4/104.35.173.151/tcp/61908,/p2p/112AySdMmbgqorb2md6XqsHZ1W8sschZi7HAbQWpjsvvozoTvD4o,skinny-viridian-butterfly
-/ip4/172.18.0.3/tcp/2154,/ip4/12.172.82.74/tcp/60949,/p2p/112C5p3cjnKDGXPJ4kLMRKYjt4KjGRGojd3D26L4XMyaaiFL2Si9,zany-bubblegum-jaguar
-/ip4/172.18.0.3/tcp/2154,/ip4/73.66.192.223/tcp/44158,/p2p/112F5Vk6XAS11vXpPbGqhit8rxy97NwpHngKW7kMufsdmsyWgSVd,macho-mercurial-chimpanzee
-/ip4/172.18.0.3/tcp/2154,/ip4/71.181.67.133/tcp/44158,/p2p/112GyaGz1Zdk49zKvvsxPgKFEVkup37UZfYswKXLLn6FjkJfMEFi,beautiful-shadow-mantis
-```
-
-</TabItem>
-</Tabs>
-
-
-## Ping
-
-```
-miner peer ping :p2p
-```
-
-Ping the peer over an established or new session.
-
-<Tabs
-  block={true}
-  defaultValue="command"
-  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
-<TabItem value="command">
-
-_switches_
-
-| switch              | parameter | Note                                   |
-| ------------------- | --------- | -------------------------------------- |
-| none                | _n/a_     | none                                   |
-
-
-_Parameters_
-
-| param               | Type     | Note                                           |
-| ------------------- | -------- | ---------------------------------------------- |
-| :p2p                | _str_    | using the ip address or p2p chain address      |
-
-</TabItem>
-<TabItem value="output">
-
-```
-$ miner peer ping /ip4/71.181.67.133/tcp/44158
-Pinged "/ip4/71.181.67.133/tcp/44158" successfully with roundtrip time: 632 ms
-```
-or
-```
-miner peer ping /p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE
-Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully with roundtrip time: 247 ms
-
-```
-
-</TabItem>
-</Tabs>
-
-
-
-
-```
----
-
-  foreground              Start release with output to stdout
-  remote_console          Connect remote shell to running node
-  rpc [Mod [Fun [Args]]]] Run apply(Mod, Fun, Args) on running node
-  eval [Exprs]            Run expressions on running node
-  stop                    Stop the running node
-  restart                 Restart the applications but not the VM
-  reboot                  Reboot the entire VM
-  pid                     Print the PID of the OS process
-  ping                    Print pong if the node is alive
-  console                 Start the release with an interactive shell
-  console_clean           Start an interactive shell without the release's applications
-  console_boot [File]     Start an interactive shell for boot script [File]
-  daemon                  Start release in the background with run_erl (named pipes)
-  daemon_boot [File]      Start boot script [File] in the background with run_erl (named pipes)
-  daemon_attach           Connect to node started as daemon with to_erl (named pipes)
-  upgrade [Version]       Upgrade the running release to a new version
-  downgrade [Version]     Downgrade the running release to a new version
-  install [Version]       Install a release
-  uninstall [Version]     Uninstall a release
-  unpack [Version]        Unpack a release tarball
-  versions                Print versions of the release available
-  escript                 Run an escript in the same environment as the release
-  status                  Verify node is running and then run status hook scripts
-  genesis|hbbft|peer|snapshot|ledger|info|trace|txn|dkg|authorize|repair|print_keys
-
-
-Usage: miner genesis commands
-
-  genesis create <old_genesis_file> <pubkey> <proof> <addrs>  - Create genesis block keeping old ledger transactions.
-  genesis forge <pubkey> <key_proof> <addrs>                  - Create genesis block from scratch just with the addresses.
-  genesis load <genesis_file>                                 - Load genesis block from file.
-  genesis export <path>                                       - Write genesis block to a file.
-  genesis key                                                 - create a keypair for use as a master key
-  genesis proof <privkey>                                     - create a key proof for adding a master key to the genesis block
-
-Usage: miner hbbft commands
-
-  hbbft status           - Display hbbft status.
-  hbbft queue            - Display hbbft message queue.
-  hbbft skip             - Skip current hbbft round.
-  hbbft group            - Display current hbbfr group.
-  hbbft perf             - Show performance of current group members.
-
-Usage: blockchain peer commands
-
-  peer listen            - Display the addresses this node is listening on.
-  peer session           - Display the nodes this node is connected to.
-  peer ping              - Ping the peer over an established or new session.
-  peer connect           - Connnect this node to another node.
-  peer disconnect        - Disconnect from a connected peer.
-  peer addr              - Display the p2p address of this node.
-  peer book              - Display information from the peerbook of this node.
-  peer gossip_peers      - Display gossip peers of this node.
-  peer refresh           - command an updated peerbook for this peer from our gossip peers.
-  peer relay_reset       - Stop the current libp2p relay swarm and retry.
-
-Usage: blockchain snapshot commands
-
-  snapshot take   - Take a snapshot at the current ledger height.
-  snapshot load   - Load a snapshot from a file.
-  snapshot grab   - Attempt to grab a snapshot from a connected peer.
-  snapshot diff   - Load two snapshots from files and find changes.
-  snapshot info   - Show information about a snapshot in a file.
-  snapshot list   - Show information about the last 5 snapshots.
-
-Usage: blockchain ledger commands
-
-  ledger balance             - Get the balance for one or all addresses.
-  ledger export              - Export transactions from the ledger to <file>.
-  ledger gateways            - Display the list of active gateways.
-  ledger variables           - Interact with chain variables.
-
-Usage: miner info commands
-
-  info height            - Get height of the blockchain for this miner.
-  info in_consensus      - Show if this miner is in the consensus_group.
-  info name              - Shows the name of this miner.
-  info block_age         - Get age of the latest block in the chain, in seconds.
-  info p2p_status        - Shows key peer connectivity status of this miner.
-  info onboarding        - Get manufacturing and staking details for this miner.
-  info summary           - Get a collection of key data points for this miner.
-  info region            - Get the operatating region for this miner.
-
-Usage: blockchain trace commands
-
-  trace start   - Start a trace for a given filter and level.
-  trace clear   - Clears all installed traces.
-
-Usage: blockchain txn commands
-
-  txn queue             - Show enqueued transactions in the txn_queue.
-  txn add_gateway       - Create an add gateway transaction.
-  txn assert_location   - Create an assert location transaction.
-
-Usage: miner dkg commands
-
-  dkg status           - Display dkg status.
-  dkg queue            - Display dkg queue.
-  dkg running          - Display the running dkg group on a non-dkg mode.
-  dkg next             - Display the next block at which an election will take place.
-
-Missing Miner Authorise
-Missing Miner 
-
 Usage: blockchain repair commands
 
   repair sync_pause     - Temporarily pause transaction sync
@@ -294,5 +20,242 @@ Usage: blockchain repair commands
   repair sync_state     - Show current sync state.
   repair analyze        - Display errors in the current blockchain state.
   repair repair         - Attempt to repair errors in blockchain state.
-
 ```
+## sync_pause
+
+```bash
+miner repair sync_pause 
+```
+
+Temporarily pause transaction sync
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+$ miner repair sync_pause
+ok
+```
+
+</TabItem>
+</Tabs>
+
+## sync_cancel
+
+```bash
+miner repair sync_cancel 
+```
+
+Cancel any in-progress transaction sync.
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+$ miner repair sync_cancel
+ok
+```
+
+</TabItem>
+</Tabs>
+
+## sync_resume
+
+```bash
+miner repair sync_resume 
+```
+
+Resume any paused transaction sync.
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+$ miner repair sync_resume
+ok
+```
+
+</TabItem>
+</Tabs>
+
+## sync_state
+
+```bash
+miner repair sync_state
+```
+
+Show current sync state.
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+$ miner repair sync_state
+sync active
+```
+
+</TabItem>
+</Tabs>
+
+
+## analyze
+
+```bash
+miner repair anaylze
+```
+
+Display errors in the current blockchain state.
+
+:::info
+You need to sync_pause before running this command.
+:::
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+$ miner repair analyze
+error: {block_absorb_failed,25014,invalid_poc}
+```
+
+</TabItem>
+</Tabs>
+
+
+## repair
+
+```bash
+miner repair repair
+```
+
+Attempt to repair errors in blockchain state.
+
+:::info
+You need to sync_pause before running this command.
+:::
+
+<Tabs
+  block={true}
+  defaultValue="command"
+  values={[{"label":"command","value":"command"},{"label":"output","value":"output"}]}>
+<TabItem value="command">
+
+_Switches_
+
+| switch              | parameter | Note                                   |
+| ------------------- | --------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+
+_Parameters_
+
+| param               | Type     | Note                                   |
+| ------------------- | -------- | -------------------------------------- |
+| none                | _n/a_    | none                                   |
+
+</TabItem>
+<TabItem value="output">
+
+```bash
+$ miner repair repair
+error: {error,{block_absorb_failed,25014,invalid_poc}}
+```
+
+</TabItem>
+</Tabs>
+
